--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "panda-dl",
-  "description": "PandAのメディアギャラリにダウンロードボタンを追加する",
+  "description": "PandA Kaltura メディアギャラリーの動画をボタン1つでダウンロードする",
   "version": "1.0.0",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "content_scripts": [
     {
       "matches": ["https://kaf.panda.ecs.kyoto-u.ac.jp/*"],
